<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
    android:layout_height="wrap_content">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/ic_background_repeat" 
    android:padding="10dp">
    
     <TextView
        android:id="@+id/newEntryTitle"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEntry_title" />
    
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

     <EditText
         android:id="@+id/dateEntry"
         style="@style/EditTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="none"
         android:ems="10" />
     
     <ImageButton
         android:id="@+id/calendarButton"
         style="@style/ButtonAppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/dateEntry"
         android:layout_toRightOf="@+id/dateEntry"
         android:cropToPadding="true"
         android:src="@drawable/ic_calendar" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/dayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
     
    <Spinner
        android:id="@+id/mealTypeEntry"
        style="@style/SpinnerAppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/meal_type"
        android:prompt="@string/meal_prompt" />
    
    <EditText
        android:id="@+id/timeEntry"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mealTypeEntry"
        android:layout_toRightOf="@+id/mealTypeEntry"
        android:ems="10"
        android:editable="false"  />
     </RelativeLayout>
        
    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/ic_camera_background" />

    <TextView
        android:id="@+id/beverageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beverage_title" />

    <EditText
        android:id="@+id/beverageEntry"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/foodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_title" />

    <EditText
        android:id="@+id/foodEntry"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/howTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_title" />

    <EditText
        android:id="@+id/howEntry"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/moodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_title" />
    
    <EditText
        android:id="@+id/moodEntry"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/commentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_title" />

    <EditText
        android:id="@+id/commentEntry"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        
		<Button
		    android:id="@+id/cancelButton"
		    style="@style/ButtonAppTheme"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancelButton_title" />
    
    	<Button
    	    android:id="@+id/saveButton"
    	    style="@style/ButtonAppTheme"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentRight="true"
    	    android:text="@string/saveButton_title" />

     </RelativeLayout>

</LinearLayout>
</ScrollView>
